Fix HUD pixel swizzle issue.

Fix the issue by:
* Use the default color matrix for paint canvas.
* For SW, we use correct gl format and type to upload pixel data
  to texture with SubTexImage2D().


Bug: 907894
Change-Id: I81f2002a6dba7e048183634e6eb3f31fea69aee6
Reviewed-on: https://chromium-review.googlesource.com/c/1352450
Commit-Queue: Peng Huang <penghuang@chromium.org>
Reviewed-by: enne <enne@chromium.org>
Cr-Commit-Position: refs/heads/master@{#611358}
Former-commit-id: 5de81321f8a5d76f9cbc5b8f82e7425f4be82c7d